# entity-extractor-linker-api-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  __init__.py  docker-compose.yml  mypy.ini  mypy_minimal.ini  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py  models.py
app/api/v1/: compendium.py  linker.py  pipeline.py  qa.py  utils.py
app/core/: compendium.py  compendium_prompts.py  entity_helpers.py  linker.py  openai_wrapper.py  qa.py  settings.py  utils.py  wikipedia_linking.py
app/middleware/: ratelimiter.py
app/models/: __init__.py  entity.py  entity_processing_context.py  qa_base.py
app/services/wikipedia/: __init__.py  async_fetchers.py  constants.py  exceptions.py  models.py  service.py
app/services/wikipedia/api/: __init__.py  client.py
app/services/wikipedia/fallbacks/: __init__.py  strategies.py
app/services/wikipedia/utils/: __init__.py  data_processor.py
tests/: conftest.py  test_compendium.py  test_endpoints.py  test_linker.py  test_pipeline.py  test_qa.py  test_utils.py  test_wikipedia_fallbacks.py  test_wikipedia_service.py
